# prog12026

Mysql_coneccao/: bc_classe.py  bd_teste.py  be_principal.py  bf_DAO.py
Mysql_incluir/progs-main-oo-basic-python-ba_databases-bc_pessoa_incluir/oo/basic/python/ba_databases/bc_pessoa_incluir/: README.md  bc_classe.py  bd_teste.py  be_principal.py  bf_DAO.py  pyproject.toml
charlies_inferno/: index.py
pyagmes/: atividade170626  labirinto
teste/: restaurante.py  restaurante_melhor.py  unittest_exemplo  veiculo.py
